--- a/Proyecto/static/style.css
+++ b/Proyecto/static/style.css
@@ -1,8 +1,24 @@
-body {
-    background-color: lightblue;
+.fondo-personalizado {
+  background-color: #40565c;
+  
 }
 
-h1 {
-    color: navy;
-    text-align: center;
+.fondo-personalizado2 {
+  background-color: #052e35;
+}
+/* Logo fijo */
+.logo {
+  background-image: url("udec.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 120px;
+  height: 120px;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  border-radius: 50%;
+  background-color: white;
+  padding: 10px;
+  box-shadow: 0px 4px 12px rgba(0,0,0,0.4);
 }
