--- a/Proyecto/templates/index.html
+++ b/Proyecto/templates/index.html
@@ -1,12 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App Flask</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
-</head>
-<body>
-    <h1>Welcome to {{ name }}</h1>
-</body>
+<!doctype html>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Machine Learning</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  </head>
+  <body class="fondo-personalizado text-white">
+    <p class="p-2 text-bg-secondary text-center fw-bold fs-1">Machine Learning</p>
+   <div class="container mt-4 px-0 ">
+  <div class="d-flex flex-row flex-wrap gap-5 justify-content-start">
+    <div class="logo" style="height: 150px;"></div>
+<!-- Actividad 1 -->
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Actividad 1
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="/actividad1">Casos Uso ML Supervisado</a></li>
+      </ul>
+    </div>
+
+    <!-- Actividad 2 -->
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Actividad 2
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="/actividad2">En espera...</a></li>
+      </ul>
+    </div>
+
+    <!-- Actividad 3 -->
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Actividad 3
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="/actividad3">En espera...</a></li>
+      </ul>
+    </div>
+
+    <!-- Actividad 4 -->
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Actividad 4
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="/actividad4">En espera...</a></li>
+      </ul>
+    </div>
+
+    <!-- Actividad 5 -->
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Actividad 5
+      </button>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="/actividad5">En espera...</a></li>
+      </ul>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  </div>
+</div>
+  </body>
 </html>
