Se añade caso de Machine Learning
Se añade uno de los 4 casos en la actividad1.html

--- a/Proyecto/templates/actividad1.html
+++ b/Proyecto/templates/actividad1.html
@@ -12,6 +12,19 @@
     <p class="p-2 text-bg-secondary text-center fw-bold fs-1">Investigacion Casos de Uso Machine Learning Supervisado</p>
    <div class="container mt-4 px-0 ">
   <div class="d-flex flex-row flex-wrap gap-5 justify-content-start">
+    <!-- Caso 1 -->
+        <div class="card mb-4 bg-secondary">
+            <div class="card-body">
+                <h5 class="card-title">Caso 1 Diagnóstico Médico Asistido</h5>
+                <p><strong>Industria:</strong> Salud</p>
+                <p><strong>Empresa:</strong> IBM Watson Health</p>
+                <p><strong>Algoritmo utilizado:</strong> Redes Neuronales Convolucionales (CNN), especializadas en clasificación de imágenes médicas.</p>
+                <p><strong>Problema resuelto:</strong> La dificultad para detectar enfermedades como el cáncer en etapas tempranas, debido a la complejidad de las imágenes médicas y la variabilidad en la interpretación humana.</p>
+                <p><strong>Beneficios:</strong> Mayor precisión diagnóstica, Reducción de errores humanos y Intervenciones más oportunas</p>
+                <p><strong>Ejemplo encontrado:</strong> Acelerar el diagnóstico de tipos complejos de cáncer link del articulo: https://techgolly.com/ai-in-healthcare-ibm-watsons-contribution-to-cancer-research</p>
+                <p><strong>Referencia APA:</strong> IBM. (2021). <em>Watson Health: Transforming healthcare with AI</em>. https://www.ibm.com/watson-health </p>
+            </div>
+        </div>
 <a href="{{ url_for('index') }}" class="btn btn-outline-light" style="position: fixed; bottom: 20px; left: 20px;">
   ← Volver al inicio
 </a>
