--- a/Proyecto/templates/index.html
+++ b/Proyecto/templates/index.html
@@ -6,12 +6,19 @@
     <title>Machine Learning</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <style>
+      /* Add your custom styles below */
+
+      .logo {
+          height: 150px;
+      }
+    </style>
   </head>
   <body class="fondo-personalizado text-white">
     <p class="p-2 text-bg-secondary text-center fw-bold fs-1">Machine Learning</p>
    <div class="container mt-4 px-0 ">
   <div class="d-flex flex-row flex-wrap gap-5 justify-content-start">
-    <div class="logo" style="height: 150px;"></div>
+    <div class="logo"></div>
 <!-- Actividad 1 -->
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
