--- a/Proyecto/templates/actividad1.html
+++ b/Proyecto/templates/actividad1.html
@@ -71,7 +71,7 @@
                                 <li>Sistema de predicciones</li>
                             </ul>
                         </p>
-                        <p><strong>Ejemplo encontrado:</strong> Sistema que analiza en tiempo real aproximadamente 90 factores para predecir la probabilidad de que un viaje se concrete, ordenando la lista de conductores disponibles mostrada a los pasajeros.</p>
+                        <p><strong>Ejemplo encontrado:</strong> Sistema que analiza en tiempo real aproximadamente , ordenando la lista de conductores disponibles mostrada a los pasajeros.</p>
                         <p><strong>Referencia APA:</strong> Regev, B. (2019, 10 de octubre). <em>How Waze predicts carpools using Google Cloud AI Platform</em>. Google Cloud Blog. https://cloud.google.com/blog/products/ai-machine-learning/how-waze-predicts-carpools-using-google-cloud-ai-platform</p>
                     </div>
                 </div>
@@ -109,4 +109,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
