se elimino la palabra cancer caso 1

--- a/Proyecto/templates/actividad1.html
+++ b/Proyecto/templates/actividad1.html
@@ -22,7 +22,7 @@
                         <p><strong>Industria:</strong> Salud</p>
                         <p><strong>Empresa:</strong> IBM Watson Health</p>
                         <p><strong>Algoritmo utilizado:</strong> Redes Neuronales Convolucionales (CNN), especializadas en clasificación de imágenes médicas.</p>
-                        <p><strong>Problema resuelto:</strong> La dificultad para detectar enfermedades como el cáncer en etapas tempranas, debido a la complejidad de las imágenes médicas y la variabilidad en la interpretación humana.</p>
+                        <p><strong>Problema resuelto:</strong> La dificultad para detectar enfermedades en etapas tempranas, debido a la complejidad de las imágenes médicas y la variabilidad en la interpretación humana.</p>
                         <p><strong>Beneficios:</strong> Mayor precisión diagnóstica, Reducción de errores humanos y Intervenciones más oportunas</p>
                         <p><strong>Ejemplo encontrado:</strong> Acelerar el diagnóstico de tipos complejos de cáncer link del articulo: https://techgolly.com/ai-in-healthcare-ibm-watsons-contribution-to-cancer-research</p>
                         <p><strong>Referencia APA:</strong> IBM. (2021). <em>Watson Health: Transforming healthcare with AI</em>. https://www.ibm.com/watson-health </p>
@@ -109,5 +109,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
