--- a/Proyecto/templates/index.html
+++ b/Proyecto/templates/index.html
@@ -7,7 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <style>
-      /* Add your custom styles below */
 
       .logo {
           height: 150px;
@@ -26,16 +25,18 @@
       </button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="/actividad1">Casos Uso ML Supervisado</a></li>
+        <li><a class="dropdown-item" href="/regresion_lineal">Predicción Ventas Helados</a></li>
       </ul>
     </div>
 
-    <!-- Actividad 2 -->
+    <!-- Actividad 2 (Regresión lineal) -->
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Actividad 2
+        Regresión lineal
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/actividad2">En espera...</a></li>
+        <li><a class="dropdown-item" href="/conceptos_regresion">Conceptos básicos</a></li>
+        <li><a class="dropdown-item" href="/regresion_lineal">Ejercicio práctico</a></li>
       </ul>
     </div>
 
@@ -68,6 +69,7 @@
         <li><a class="dropdown-item" href="/actividad5">En espera...</a></li>
       </ul>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
   </div>
 </div>
