--- a/Proyecto/templates/conceptos_regresion.html
+++ b/Proyecto/templates/conceptos_regresion.html
@@ -24,9 +24,8 @@
         </ul>
         <h4>Referencias (APA 7)</h4>
         <ul>
-          <li>Montgomery, D. C., Peck, E. A., & Vining, G. G. (2012). <i>Introduction to Linear Regression Analysis</i> (5th ed.). Wiley.</li>
-          <li>Kutner, M. H., Nachtsheim, C. J., Neter, J., & Li, W. (2004). <i>Applied Linear Statistical Models</i> (5th ed.). McGraw-Hill/Irwin.</li>
-          <li>Wooldridge, J. M. (2016). <i>Introductory Econometrics: A Modern Approach</i> (6th ed.). Cengage Learning.</li>
+          <li>Castro, A. (2023). <i>Regresión lineal: supuestos</i></li>
+          <li>Amazon Web Services. (s. f.). <i> ¿Qué es la regresión lineal? AWS.</i>https://aws.amazon.com/es/what-is/linear-regression/</li>
         </ul>
       </div>
       <a href="{{ url_for('index') }}" class="btn btn-outline-light mt-3">Volver al menú principal</a>
