--- a/Proyecto/templates/conceptos_regresion.html
+++ b/Proyecto/templates/conceptos_regresion.html
@@ -17,10 +17,10 @@
         </p>
         <h4>Supuestos habituales</h4>
         <ul>
-          <li><strong>Linealidad:</strong> La relación entre las variables es lineal.</li>
-          <li><strong>Independencia:</strong> Las observaciones son independientes entre sí.</li>
-          <li><strong>Homocedasticidad:</strong> La varianza de los errores es constante.</li>
-          <li><strong>Normalidad del error:</strong> Los errores se distribuyen normalmente.</li>
+          <li><strong>Linealidad:</strong> En el conjunto de datos a analizar debe existir una relación lineal, es decir entre la variable independiente X y la variable dependiente Y, los analistas crean un gráfico de dispersión para verificar si los valores caen a lo largo de una línea recta, de lo contrario se pueden aplicar funciones no lineales para crear matemáticamente la relación lineal entre las variables </li>
+          <li><strong>Independencia:</strong> La independencia residual es la que utilizan los analistas para medir la precisión de la predicción mediante un residuo, el residuo es la diferencia entre los datos observados y el valor esperado, los residuos no deben seguir algún patrón en específico, se puede utilizar diferentes pruebas matemáticas como la de Durbin-Watson para determinar la independencia residual </li>
+          <li><strong>Homocedasticidad:</strong> Se dice que los residuos tienen una variación constante o desviación estándar de la media para cada valor de X, de lo contrario es posible que el resultado del análisis no sea preciso, sino se cumple esta suposición es posible que se tenga que cambiar la variable dependiente ya que la variación se produce de manera natural.</li>
+          <li><strong>Normalidad del error:</strong>Al momento de graficar esto nos puede ayudar a verificar si los residuos se distribuyen normalmente, los residuos deben caer a lo largo de una línea diagonal en el centro de la gráfica, sino están normalizados se prueban los datos para detectar valores atípicos aleatorios o valores que no sean típicos.</li>
         </ul>
         <h4>Referencias (APA 7)</h4>
         <ul>
