Correcion de apa en referencias

--- a/Proyecto/templates/conceptos_regresion.html
+++ b/Proyecto/templates/conceptos_regresion.html
@@ -22,11 +22,22 @@
           <li><strong>Homocedasticidad:</strong> Se dice que los residuos tienen una variación constante o desviación estándar de la media para cada valor de X, de lo contrario es posible que el resultado del análisis no sea preciso, sino se cumple esta suposición es posible que se tenga que cambiar la variable dependiente ya que la variación se produce de manera natural.</li>
           <li><strong>Normalidad del error:</strong>Al momento de graficar esto nos puede ayudar a verificar si los residuos se distribuyen normalmente, los residuos deben caer a lo largo de una línea diagonal en el centro de la gráfica, sino están normalizados se prueban los datos para detectar valores atípicos aleatorios o valores que no sean típicos.</li>
         </ul>
-        <h4>Referencias (APA 7)</h4>
-        <ul>
-          <li>Castro, A. (2023). <i>Regresión lineal: supuestos</i></li>
-          <li>Amazon Web Services. (s. f.). <i> ¿Qué es la regresión lineal? AWS.</i>https://aws.amazon.com/es/what-is/linear-regression/</li>
-        </ul>
+        <p><strong>Ejemplo encontrado:</strong> Sistema de clasificación automática de correos que categoriza y genera respuestas personalizadas basadas en el contenido.</p>
+                        <p><strong>Referencias:</strong></p>
+                        <ul class="references-list">
+
+                        </ul>
+                        <ul class="references-list">
+                           <li>Amazon Web Services (AWS). (s.f.). <em>¿Qué es la regresión lineal?</em>.
+                             <a href="https://aws.amazon.com/es/what-is/linear-regression/" target="_blank" rel="noopener">https://aws.amazon.com/es/what-is/linear-regression/</a>
+                           </li>
+                             <li>acastro. (2014). <em>Supuestos de la Regresión Lineal</em>.
+                              <a href="https://rpubs.com/acastro/regresion_lineal_supuestos" target="_blank" rel="noopener">https://rpubs.com/acastro/regresion_lineal_supuestos</a>
+                           </li>
+                            <li>IBM. (2021). <em>Regresión lineal</em>.
+                               <a href="https://www.ibm.com/es-es/think/topics/linear-regression" target="_blank" rel="noopener">https://www.ibm.com/es-es/think/topics/linear-regression</a>
+                            </li>
+                        </ul>
       </div>
       <a href="{{ url_for('index') }}" class="btn btn-outline-light mt-3">Volver al menú principal</a>
     </div>
