--- a/Proyecto/templates/index.html
+++ b/Proyecto/templates/index.html
@@ -39,13 +39,14 @@
       </ul>
     </div>
 
-    <!-- Actividad 3 -->
+    <!-- Actividad 3 (Regresión logística) -->
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Actividad 3
+        Regresión logística
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/actividad3">En espera...</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('conceptos_regresionLogistica') }}">Conceptos básicos</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('regresion_logistica') }}">Ejercicio práctico</a></li>
       </ul>
     </div>
 
