Actualizacion menú en index.html para cumplir rúbrica de clasificación
Se actualizó el menú principal en index.html eliminando los botones "Actividad 4" y "Actividad 5".

Se incorporó la pestaña "Tipos de Algoritmos de Clasificación"
con los submenús "Conceptos básicos" y "Caso práctico"

--- a/Proyecto/templates/index.html
+++ b/Proyecto/templates/index.html
@@ -50,23 +50,14 @@
       </ul>
     </div>
 
-    <!-- Actividad 4 -->
+    <!-- Tipos de Algoritmos de Clasificación -->
     <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Actividad 4
+        Tipos de Algoritmos de Clasificación
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/actividad4">En espera...</a></li>
-      </ul>
-    </div>
-
-    <!-- Actividad 5 -->
-    <div class="dropdown">
-      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Actividad 5
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="/actividad5">En espera...</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('conceptos_clasificacion') }}">Conceptos básicos</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('caso_practico_clasificacion') }}">Caso práctico</a></li>
       </ul>
     </div>
 
