--- a/Proyecto/templates/index.html
+++ b/Proyecto/templates/index.html
@@ -56,7 +56,8 @@
         Tipos de Algoritmos de Clasificación
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="{{ url_for('conceptos_clasificacion') }}">Conceptos básicos</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('conceptos_clasificacion') }}">Mapa Mental MindMeister</a></li>
+        <li><a class="dropdown-item" href="{{ url_for('conceptos_teoricos_clasificacion') }}">Conceptos teóricos</a></li>
         <li><a class="dropdown-item" href="{{ url_for('caso_practico_clasificacion') }}">Caso práctico</a></li>
       </ul>
     </div>
